--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "author": "Soroosh Merajiyan",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "26.0.15",
     "@types/node": "14.14.7",
     "@types/node-fetch": "2.5.7",
-    "nodemon": "2.0.6"
+    "nodemon": "2.0.6",
+    "ts-jest": "26.4.4",
+    "typescript": "4.0.5"
   },
   "dependencies": {
     "node-fetch": "2.6.1"
