--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc -w",
-    "start": "nodemon dist/index.js"
+    "start": "nodemon dist/index.js",
+    "test": "npx jest",
+    "test:watch": "npx jest --watch"
   },
   "keywords": [
     "Twitch",
@@ -18,6 +20,7 @@
     "@types/jest": "26.0.15",
     "@types/node": "14.14.7",
     "@types/node-fetch": "2.5.7",
+    "jest": "26.6.3",
     "nodemon": "2.0.6",
     "ts-jest": "26.4.4",
     "typescript": "4.0.5"
