--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "ts-jest": "26.4.4",
     "typescript": "4.0.5"
   },
+  "files": [
+    "/dist"
+  ],
   "dependencies": {
     "node-fetch": "2.6.1"
   }
