--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twitch-new-api",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Twitchfa Helix Api Wrapper in TypeScript",
   "main": "dist/index.js",
   "scripts": {
@@ -30,7 +30,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/SorooshMerajiyan/Twitch-New-Api"
   },
   "dependencies": {
     "node-fetch": "2.6.1"
