--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/SorooshMerajiyan/Twitch-New-Api"
+    "url": "https://github.com/SorooshMerajiyan/Twitch-New-Api.git"
   },
   "dependencies": {
     "node-fetch": "2.6.1"
